// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer Footer No Override 1`] = `
<div
  id="root"
>
  <div
    class="MuiBox-root css-sw8jpj"
  >
    Nebraska 
  </div>
</div>
`;

exports[`Storyshots Footer Footer Override 1`] = `
<div
  id="root"
>
  <div
    class="MuiBox-root css-sw8jpj"
  >
    Some Pro Update Service 1.2.3
  </div>
</div>
`;
